<resources>
    <string name="app_name">Star Wars</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_characteres">Characteres</string>
    <string name="title_droids">Droids</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_films">Films</string>
    <string name="title_email">E-mail</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>

    <string name="title_user_name">Name</string>
    <string name="title_user_email">E-mail</string>
    <string name="title_confirm_pass">Cofirmar Senha</string>
    <string name="title_register">OK</string>

    <string name="title_user">User</string>
    <string name="title_logout">Logout</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_share">Share</string>
    <string name="title_profile">Profile</string>
    <string name="msg_error_generic">Ops! Algo falhou!</string>
    <string name="msg_error_user_invalid">Usuário ou Senha inválidos!</string>
    <string name="title_places">Places</string>

</resources>
