<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characteres"
            android:icon="@drawable/ic_menu_characteres"
            android:title="@string/title_characteres" />
        <item
            android:id="@+id/nav_droids"
            android:icon="@drawable/ic_menu_droids"
            android:title="@string/title_droids" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_menu_vehicles"
            android:title="@string/title_vehicles" />
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_menu_films"
            android:title="@string/title_films" />
    </group>

    <item android:title="@string/title_user">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/title_login"/>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/title_login"
                android:visible="false"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_logout"
                android:visible="false"/>
        </menu>
    </item>

</menu>
