<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_email"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/user_save_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Manter logado"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_login"/>

</LinearLayout>